--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -44,7 +44,7 @@ To demonstrate the effectiveness and potential of this approach, results will be
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=4cm]{./figures/general_networks/four.pdf}
-         \caption{Planer, $c=4$, \\ angle controlled.}
+         \caption{Planer, $c=4$, \\ angle controlled}
          \label{fig:ne3}
      \end{subfigure}
      \hfill
@@ -53,21 +53,21 @@ To demonstrate the effectiveness and potential of this approach, results will be
       \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=4cm]{./figures/general_networks/afull92.pdf}
-         \caption{Spherical, $c=3$.}
+         \caption{Spherical, $c=3$}
          \label{fig:ne4}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=4cm]{./figures/general_networks/traft.pdf}
-         \caption{Triangle raft.}
+         \caption{Triangle raft}
          \label{fig:ne5}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=4cm]{./figures/general_networks/colloid.pdf}
-         \caption{Hard disk Voronoi.}
+         \caption{Hard disk Voronoi}
          \label{fig:ne6}
      \end{subfigure}
      \hfill
@@ -76,7 +76,7 @@ To demonstrate the effectiveness and potential of this approach, results will be
      \begin{subfigure}[b]{0.5\textwidth}
          \centering
          \includegraphics[width=\textwidth]{./figures/general_networks/ch_lowres.pdf}
-         \caption{Communes of Switzerland.}
+         \caption{Communes of Switzerland}
          \label{fig:ne7}
      \end{subfigure}
 
@@ -330,7 +330,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=2.6cm]{./figures/general_networks/bs_move_a.pdf}
-         \caption{Initial $c=3$.}
+         \caption{Initial $c=3$}
          \label{fig:bsmovea}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -338,7 +338,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=1.8cm]{./figures/general_networks/bs_move_b.pdf}
-         \caption{Switched $c=3$.}
+         \caption{Switched $c=3$}
          \label{fig:bsmoveb}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -346,7 +346,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=2.1cm]{./figures/general_networks/bs_move_c.pdf}
-         \caption{Optimised $c=3$.}
+         \caption{Optimised $c=3$}
          \label{fig:bsmovec}
      \end{subfigure}
      
@@ -354,7 +354,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=2.6cm]{./figures/general_networks/bs_move_d.pdf}
-         \caption{Initial $c=4$.}
+         \caption{Initial $c=4$}
          \label{fig:bsmoved}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -362,7 +362,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=2.6cm]{./figures/general_networks/bs_move_e.pdf}
-         \caption{Switched $c=4$.}
+         \caption{Switched $c=4$}
          \label{fig:bsmovee}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -370,7 +370,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=1.8cm]{./figures/general_networks/bs_move_f.pdf}
-         \caption{Optimised $c=4$.}
+         \caption{Optimised $c=4$}
          \label{fig:bsmovef}
      \end{subfigure}
      
@@ -378,7 +378,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=1.8cm]{./figures/general_networks/bs_move_g.pdf}
-         \caption{Initial $c=3,4$.}
+         \caption{Initial $c=3,4$}
          \label{fig:bsmoveg}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -386,7 +386,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=1.8cm]{./figures/general_networks/bs_move_h.pdf}
-         \caption{Switched $c=4,3$.}
+         \caption{Switched $c=3,4$}
          \label{fig:bsmoveh}
      \end{subfigure}
      %{\LARGE$\rightarrow$}
@@ -394,7 +394,7 @@ This can be countered by using a move in which the coordinations of neighbouring
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
          \includegraphics[height=1.8cm]{./figures/general_networks/bs_move_i.pdf}
-         \caption{Optimised $c=4,3$.}
+         \caption{Optimised $c=3,4$}
          \label{fig:bsmovei}
      \end{subfigure}
      
@@ -426,14 +426,14 @@ Once this lattice has been constructed, the bond switching algorithm may proceed
       \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full92_iso.pdf}
-         \caption{Subdivided icosahedron.}
+         \caption{Subdivided icosahedron}
          \label{fig:topo1}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full92_iso_min.pdf}
-         \caption{Projected icosahedron.}
+         \caption{Projected icosahedron}
          \label{fig:topo2}
      \end{subfigure}
      \hfill
@@ -449,21 +449,21 @@ Once this lattice has been constructed, the bond switching algorithm may proceed
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full98_iso.pdf}
-         \caption{Subdivided cube.}
+         \caption{Subdivided cube}
          \label{fig:topo4}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full98_iso_min.pdf}
-         \caption{Projected cube.}
+         \caption{Projected cube}
          \label{fig:topo5}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full98.pdf}
-         \caption{4\--coordinate fullerene.}
+         \caption{4\--coordinate fullerene}
          \label{fig:topo6}
      \end{subfigure}
      \hfill
@@ -472,21 +472,21 @@ Once this lattice has been constructed, the bond switching algorithm may proceed
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full42.pdf}
-         \caption{42\--ring fullerene.}
+         \caption{42\--ring fullerene}
          \label{fig:topo7}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full252.pdf}
-         \caption{252\--ring fullerene.}
+         \caption{252\--ring fullerene}
          \label{fig:topo8}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.3\textwidth}
          \centering
          \includegraphics[height=3.5cm]{./figures/general_networks/full492.pdf}
-         \caption{492\--ring fullerene.}
+         \caption{492\--ring fullerene}
          \label{fig:topo9}
      \end{subfigure}
      \hfill
@@ -810,19 +810,19 @@ Although this is a simple consequence of the mechanical properties of the system
 
 \section{Chapter Conclusions}
 
-In summary, this chapter has thoroughly examined the network properties of a wide range of naturally occurring \td{} systems; spanning varying coordination environments, potential models and topologies.
+This chapter has thoroughly examined the network properties of a wide range of naturally occurring \td{} systems; spanning varying coordination environments, potential models and topologies.
 Data has been collected from a range of experimental sources, and have the theoretical bond switching method has been further developed to aid the study of these diverse systems computationally.
 These data have been analysed with rigorous metrics from network science, with the aim of highlighting the study of real\--world physical systems as an important and interesting addition to the wider field.
 In particular these networks display unique constraints as a result of their underlying physics.
 It has been shown that their mean node degree is fixed and the node degree distribution is well defined, following \lm's law.
-In addition the concept of network assortativity has been introduced to measure ring correlations, and its preferability over the previous empirical measure known as the \aw{} law has been argued.
+In addition the concept of network assortativity has been introduced to measure ring correlations, and its preference over the previous empirical measure known as the \aw{} law has been argued.
 Although the assortativity has been shown to be a function of the potential model for a system and the limits of the assortativity linked to the occurrence of well\--known physical motifs; most physical networks show a very similar overall level of disassortativity, as experienced in nature.
 An exception to this rule has also been found, where variable\--coordination systems can de\--mix to exhibit assortative behaviour.
 
 In this chapter it has demonstrated how network science is applicable to understanding and analysing generic systems in physics, but also how physical systems form a key and under\--explored area of network science.
-Going forward there is lots of potential scope to extend these explorations.
+Going forward there is significant scope to extend this research.
 For example, there are still questions to be answered from this work such as how network properties such as the assortativity are explicitly related to the physics of the underlying system and whether this information can be utilised experimentally \-- for example to control and effectively quantify the pore size in materials.
-This has also set up extensions to investigating more disordered networks still, such as biological networks which have a wider range of coordination environments.
+This has also set up extensions towards investigating more disordered networks still, such as biological networks which have an even wider range of coordination environments.
 
 
 
