--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -610,14 +610,13 @@ This could have implications when designing materials, for which there are eigen
 
 \section{Chapter Conclusions}
 
-An innovative method has been presented to generate \td{} materials with well defined topology. 
+An innovative method has been presented to generate \td{} network materials with well defined topology. 
 This targeted \mc{} search algorithm allows configurations to be constructed which have precise ring size distributions and ring\--ring correlations.
 The advantage of this approach is that configurations can be produced rapidly with controllable properties; which may lie outside experimentally or physically accessible regions of phase space.
 These configurations may then be used as starting points for further investigations.
-For example, the algorithm outlined in this work has already been utilised to study the mechanical properties of vitreous silica under deformation \cite{Bamer2020,Ebrahem2020a,Whitaker2019}.
+For example, the algorithm outlined in this work has already been utilised to study the mechanical properties of vitreous silica under deformation \cite{Bamer2020,Ebrahem2020a}.
 In this chapter the targeted optimisation method was employed to probe the physical meaning of the \aw{} parameter.
-The effect of $\alpha$ on the ring structure has been quantified through partial RDFs.
-In addition the energetic minima for a range of systems has been shown to correspond well with values commonly found in nature.
+The effect of $\alpha$ on the ring structure has been quantified through partial RDFs, and the energetic minima for a range of systems has been shown to correspond well with values commonly found in nature.
 Finally, the method was employed in a study of the ring percolation in amorphous graphene, with the phase behaviour quantified in terms of the ring statistics and the \aw{} parameter.
 
  
