--- a/text/theory.tex
+++ b/text/theory.tex
@@ -349,7 +349,7 @@ In an attempt to explain this observation, Weaire came across the following rela
 \end{equation}
 known as Weaire's sum rule \cite{Weaire1974}.
 From this he suggested the modification of $m_k=5+\left(6+\mu_2\right)/k$ which satisfied this rule.
-Aboav's original equation then became a special case when $\mu_2=2$, which is close to the expected value for a random collection of Voronoi polygons (see section \ref{ssec:voronoi}).
+Aboav's original equation then became a special case when $\mu_2=2$, which is close to the expected value for a random collection of Voronoi polygons (see section \ref{s:voronoiintro}).
 Aboav then proposed that if a generic form of $m_k = A + B/k$ was used in conjunction with Weaire's sum rule then
 \begin{equation}
 	m_k = A+\frac{\mu_2+\ki^2-A\ki}{k}\,.
