--- a/thesis.tex
+++ b/thesis.tex
@@ -73,7 +73,7 @@
 
 %%%%% THESIS / TITLE PAGE INFORMATION
 % Everybody needs to complete the following:
-\title{Rings and Things}
+\title{Structural Disorder in Two\--Dimensional Network\--Forming Materials}
 \author{David Ormrod Morley}
 \college{Balliol College}
 
