--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -1,8 +1,8 @@
 \chapter{Introduction}
 \label{ch:intro}
 
-\section{Background}
-\label{s:background}
+%\section{Background}
+%\label{s:background}
 
 The notion of describing amorphous materials as random networks dates back to \zach, who in 1932 sketched a simple diagram of a \td{} glass \cite{Zachariasen1932}.
 This configuration, reproduced in figure \ref{fig:zach_orig}, showed a collection of percolating rings with an absence of long\--range order.
@@ -133,39 +133,40 @@ Finally, and perhaps most importantly, simulation allows a holistic study of mat
 This enables properties to systematically explored, in principle leading to the holy grail of computational modelling, that of predictive capability.
 This thesis aims to incorporate all of these aspects, designing models and algorithms to simulate a wide range of \td{} systems, developing metrics to better characterise them and compare to experiment, and ultimately pushing these models outside the current experimental bounds.  
 \davidnote{As above?}
+\davidnote{Revisit intro to make more consistent with conclusion and include reiterate key themes of work}
 
-\section{Thesis Structure}
-
-The structure of this thesis is as follows:
-\davidnote{Todo: thesis structure}
-\davidnote{Just basically a repeat of abstracts?}
-\davidnote{Actually can this section just go?}
-
-\begin{itemize}
-	\item \textbf{Chapter 2}: the theory underpinning complex networks is discussed, covering the representation of atomic systems as networks and the relationship of the dual network to ring structure.
-The laws which govern the topological properties of physical networks are also introduced, namely Euler's law, \lm's law and the \aw{} law.
-
-	\item \textbf{Chapter 3}: the theoretical basis of \mc{} methods and their application to generating realisations of \td{} networks is reviewed.
-There is a broad discussion of Metropolis \mc{} methods, before specific methods are covered in detail; namely the bond switching algorithm and hard particle \mc{} in conjunction with the Voronoi construction.
-This discussion lays the groundwork for the extension of these methods and development of additional \mc{} algorithms in subsequent chapters.
-	
-	\item \textbf{Chapter 4}: a computationally tractable \mc{} method using triangle rafts is developed to generate bilayers of \sioii{} and related materials.
-The method allows defect free networks of any given shape to be grown with both tuneable ring statistics and topologies, controlled by a combination of the choice of the ``allowed'' rings and the effective growth ``temperature''. 
-Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods.
-The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic factors. 
-The deviations of ring areas from the ideal values are discussed and the relative insensitivity of the ring area to relatively strong distortions is highlighted.
-	
-	\item \textbf{Chapter 5}:
-	
-	\item \textbf{Chapter 6}:
-	
-	\item \textbf{Chapter 7}:
-	
-	\item \textbf{Chapter 8}:
-
-	\item \textbf{Chapter 9}:
-	
-	\item \textbf{Chapter 10}:
-\end{itemize}
+%\section{Thesis Structure}
+%
+%The structure of this thesis is as follows:
+%\davidnote{Todo: thesis structure}
+%\davidnote{Just basically a repeat of abstracts?}
+%\davidnote{Actually can this section just go?}
+%
+%\begin{itemize}
+%	\item \textbf{Chapter 2}: the theory underpinning complex networks is discussed, covering the representation of atomic systems as networks and the relationship of the dual network to ring structure.
+%The laws which govern the topological properties of physical networks are also introduced, namely Euler's law, \lm's law and the \aw{} law.
+%
+%	\item \textbf{Chapter 3}: the theoretical basis of \mc{} methods and their application to generating realisations of \td{} networks is reviewed.
+%There is a broad discussion of Metropolis \mc{} methods, before specific methods are covered in detail; namely the bond switching algorithm and hard particle \mc{} in conjunction with the Voronoi construction.
+%This discussion lays the groundwork for the extension of these methods and development of additional \mc{} algorithms in subsequent chapters.
+%	
+%	\item \textbf{Chapter 4}: a computationally tractable \mc{} method using triangle rafts is developed to generate bilayers of \sioii{} and related materials.
+%The method allows defect free networks of any given shape to be grown with both tuneable ring statistics and topologies, controlled by a combination of the choice of the ``allowed'' rings and the effective growth ``temperature''. 
+%Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods.
+%The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic factors. 
+%The deviations of ring areas from the ideal values are discussed and the relative insensitivity of the ring area to relatively strong distortions is highlighted.
+%	
+%	\item \textbf{Chapter 5}:
+%	
+%	\item \textbf{Chapter 6}:
+%	
+%	\item \textbf{Chapter 7}:
+%	
+%	\item \textbf{Chapter 8}:
+%
+%	\item \textbf{Chapter 9}:
+%	
+%	\item \textbf{Chapter 10}:
+%\end{itemize}
 	
  
